--- a/package.json
+++ b/package.json
@@ -39,5 +39,11 @@
   "packageManager": "yarn@3.2.3",
   "engines": {
     "node": ">=18.18.0"
+  },
+  "dependencies": {
+    "@uidotdev/usehooks": "^2.4.1",
+    "react-hook-form": "^7.53.0",
+    "react-indexed-db-hook": "^1.0.14",
+    "usehooks-ts": "^3.1.0"
   }
 }
